(coq.extraction
 (prelude Extractor)
 (extracted_modules
  Ascii List Mergesort Nat Orders String
  Base Datatypes Dict Result Stream
  Lustre LustreOrdered
  LustreOrdering)
 (theories Reactive Reactive.Datatypes Reactive.Translations))

(executable
 (name main)
 (public_name reactive))

(env
 (dev
  (flags
   (:standard -w -33))))
