(coq.extraction
 (prelude Extractor)
 (extracted_modules
  Ascii Bool List Mergesort Nat Orders String
  Base Datatypes Dict Result Sorted Stream 
  Lustre LustreOrdered Imp
  LustreOrdering LustreOrderedToImp)
 (theories Reactive Reactive.Datatypes Reactive.Translations))

(executable
 (name main)
 (public_name reactive))

(ocamllex
 (modules lexer))

(menhir
 (modules parser))

(env
 (dev
  (flags
   (:standard -w -33))))
