(coq.extraction
 (prelude Extractor)
 (extracted_modules
  Ascii
  Bool
  List ListDef
  Mergesort
  Nat
  Orders
  String
  Identifier
  Semantics
  Axioms
  Dec
  Datatypes
  Dict
  Result
  Sorted
  Specif
  Stream
  LustreAst
  Lustre
  LustreOrdered
  Imp
  LustreAstToLustre
  LustreOrdering
  LustreOrderedToImp
  FMapList OrderedType OrdersTac)
 (theories Stdlib Reactive Reactive.Datatypes Reactive.Translations Reactive.Props))

(library
 (name extracted)
 (public_name extracted))

(env
 (dev
  (flags
   (:standard -w -33-39-67))))
