(coq.extraction
 (prelude Extractor)
 (extracted_modules
  Ascii
  Bool
  FMapList
  List ListDef
  Nat
  OrderedType
  Orders
  OrdersTac
  Specif
  String
  ; (root)
   Datatypes
    Array
    Dict
    Hashtable
    Result
    Sorted
    Stream
   ; Props
    Axioms
;    Dec  (unused)
    Identifier
   ; Languages
    LustreAst
    Lustre
    LustreOrdered
    Imp
    Semantics
   ; Translations
    LustreAstToLustre
    LustreOrdering
    LustreOrderedToImp
 )
 (theories Stdlib Reactive Reactive.Datatypes Reactive.Props Reactive.Translations))

(library
 (name extracted)
 (public_name extracted))

(env
 (dev
  (flags
   (:standard -w -20-33-39-67))))
