(coq.extraction
 (prelude Extractor)
 (extracted_modules
  Ascii
  BinInt
  BinNums
  BinPos
  Bool
  FMapList
  List ListDef
  Nat
  OrderedType
  Orders
  OrdersTac
  PosDef
  Specif
  String
  ; (root)
   Datatypes
    Array
    Dict
    Hashtable
    Result
    Sorted
    Stream
   ; Props
;    Axioms (unused)
;    Dec    (unused)
    Identifier
   ; Languages
    Freshness
    LustreAst
    Lustre
    LustreOrdered
    LustreTiming
    Imp
    Semantics
    Types
   ; Translations
    LustreAstToLustre
    LustreToTiming
    LustreOrdering
    LustreOrderedToImp
 )
 (theories Stdlib Reactive Reactive.Datatypes Reactive.Props Reactive.Translations))

(library
 (name extracted)
 (public_name extracted))

(env
 (dev
  (flags
   (:standard -w -20-33-39-67))))
